--- a/public/index.html
+++ b/public/index.html
@@ -102,14 +102,14 @@
     <p>130&thinsp;291 movies inside</p>
   </section>
 </footer>
-<script>
+<script>/*
   navigator.serviceWorker.register(`./sw.js`)
     .then(function(reg) {
       console.log('Registration succeeded. Scope is ' + reg.scope);
     })
     .catch(function(error) {
       console.log('Registration failed with ' + error);
-    });
+    });*/
 </script>
 <script src="bundle.js"></script>
 
